feat: deploy "ham"

--- a/source/index.html
+++ b/source/index.html
@@ -4,18 +4,18 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<link rel="stylesheet" href="./styles/reset.css">
+	<link rel="stylesheet" href="styles/reset.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,300;0,400;0,700;1,200;1,300;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" type="text/css" href="./styles/step.css">
-	<link rel="stylesheet" href="./styles/loader.css">
+	<link rel="stylesheet" type="text/css" href="styles/step.css">
+	<link rel="stylesheet" href="styles/loader.css">
 	<script defer src="https://unpkg.com/masonry-layout@4.2.2/dist/masonry.pkgd.min.js"></script>
-     <script defer src="./scripts/services.js"></script>
-	<script defer src="./scripts/amazingWork.js"></script>
-	<script defer src="./scripts/slider.js"></script>
-	<script defer src="./scripts/bestimg.js"></script>
+     <script defer src="scripts/services.js"></script>
+	<script defer src="scripts/amazingWork.js"></script>
+	<script defer src="scripts/slider.js"></script>
+	<script defer src="scripts/bestimg.js"></script>
 </head>
 <body>
 	<div class="wrapper">
@@ -47,7 +47,7 @@
 				<a href="#" class="nav-link">Service</a>
 				<a href="#" class="nav-link">Work</a>
 				<a href="#" class="nav-link">Testimonial</a>
-<img src="./img/Search icon 1.png" alt="icon" class="search_icon">
+<img src="img/Search%20icon%201.png" alt="icon" class="search_icon">
 			</nav></div>
 </div>
 		</header>
@@ -64,10 +64,10 @@
 <section class="features">
 	
 <ul >
-	<li class="features_item"><img src="./img/Combined shape 629.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
-	<li class="features_item"><img src="./img/Combined shape 1172.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
-	<li class="features_item"><img src="./img/Combined shape 1179.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
-	<li class="features_item"><img src="./img/Combined shape 1102 (1).png" alt="ico" class="features_icon"><p>Different theme option</p></li>
+	<li class="features_item"><img src="img/Combined%20shape%20629.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
+	<li class="features_item"><img src="img/Combined%20shape%201172.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
+	<li class="features_item"><img src="img/Combined%20shape%201179.png" alt="ico" class="features_icon"><p>Different theme option</p></li>
+	<li class="features_item"><img src="img/Combined%20shape%201102%20(1).png" alt="ico" class="features_icon"><p>Different theme option</p></li>
 	
 </ul>
 </div>
@@ -86,14 +86,14 @@
 	</ul>
 <div class="item-content">
 	<ul class="content">
-	<li id="webdesign" class="content_item"><img src="./img/Layer 52.png" alt="image" class="content_img"><p>Web design encompasses many different skills and disciplines in the production and maintenance of websites. The different areas of web design include web graphic design; user interface design (UI design); authoring, including standardised code and proprietary software; user experience design (UX design); and search engine optimization. </p></li>
-	<li id="graphicdesign" class="content_item"><img  class ="content_img" src="./img/graphic-designer.jpg" alt="graphicdesign"><p>Graphic design is the profession and academic discipline whose activity consists in projecting visual communications intended to transmit specific messages to social groups, with specific objectives. Design is based on the principle of "form follows a specific function".[2]
+	<li id="webdesign" class="content_item"><img src="img/Layer%2052.png" alt="image" class="content_img"><p>Web design encompasses many different skills and disciplines in the production and maintenance of websites. The different areas of web design include web graphic design; user interface design (UI design); authoring, including standardised code and proprietary software; user experience design (UX design); and search engine optimization. </p></li>
+	<li id="graphicdesign" class="content_item"><img class ="content_img" src="img/graphic-designer.jpg" alt="graphicdesign"><p>Graphic design is the profession and academic discipline whose activity consists in projecting visual communications intended to transmit specific messages to social groups, with specific objectives. Design is based on the principle of "form follows a specific function".[2]
 
 </p></li>
-	<li  id="onlinesupport" class="content_item"><img class="content_img" src="./img/onlinesupport.jpg" alt="onlinesupport"><p>Customer support is a range of customer services to assist customers in making cost effective and correct use of a product. It includes assistance in planning, installation, training, troubleshooting, maintenance, upgrading, and disposal of a product.[1] Regarding technology products such as mobile phones, televisions, computers, software products or other electronic or mechanical goods, it is termed technical support.[1]</p></li>
-	<li id="designapp" class="content_item"><img class="content_img" src="./img/designapp.png" alt="designapp"><p>Software design is the process by which an agent creates a specification of a software artifact intended to accomplish goals, using a set of primitive components and subject to constraints.[1] Software design may refer to either "all the activity involved in conceptualizing, framing, implementing, commissioning, and ultimately modifying complex systems" or "the activity following requirements specification and before programming, as ... [in] a stylized software engineering process."</p></li>
-	<li id="onlinemarketing" class="content_item"><img class="content_img" src="./img/onlinemarketing.jpg" alt="onlinemarketing"><p>Digital marketing is the component of marketing that uses the Internet and online based digital technologies such as desktop computers, mobile phones and other digital media and platforms to promote products and services.[</p></li>
-	<li id="seoservice" class="content_item"><img class="content_img" src="./img/seoservice.png" alt="seoservice"><p>Search engine optimization (SEO) is the process of improving the quality and quantity of website traffic to a website or a web page from search engines.[1] SEO targets unpaid traffic (known as "natural" or "organic" results) rather than direct traffic or paid traffic. Unpaid traffic may originate from different kinds of searches, including image search, video search, academic search,[2] news search, and industry-specific vertical search engines.</p></li></ul>
+	<li  id="onlinesupport" class="content_item"><img class="content_img" src="img/onlinesupport.jpg" alt="onlinesupport"><p>Customer support is a range of customer services to assist customers in making cost effective and correct use of a product. It includes assistance in planning, installation, training, troubleshooting, maintenance, upgrading, and disposal of a product.[1] Regarding technology products such as mobile phones, televisions, computers, software products or other electronic or mechanical goods, it is termed technical support.[1]</p></li>
+	<li id="designapp" class="content_item"><img class="content_img" src="img/designapp.png" alt="designapp"><p>Software design is the process by which an agent creates a specification of a software artifact intended to accomplish goals, using a set of primitive components and subject to constraints.[1] Software design may refer to either "all the activity involved in conceptualizing, framing, implementing, commissioning, and ultimately modifying complex systems" or "the activity following requirements specification and before programming, as ... [in] a stylized software engineering process."</p></li>
+	<li id="onlinemarketing" class="content_item"><img class="content_img" src="img/onlinemarketing.jpg" alt="onlinemarketing"><p>Digital marketing is the component of marketing that uses the Internet and online based digital technologies such as desktop computers, mobile phones and other digital media and platforms to promote products and services.[</p></li>
+	<li id="seoservice" class="content_item"><img class="content_img" src="img/seoservice.png" alt="seoservice"><p>Search engine optimization (SEO) is the process of improving the quality and quantity of website traffic to a website or a web page from search engines.[1] SEO targets unpaid traffic (known as "natural" or "organic" results) rather than direct traffic or paid traffic. Unpaid traffic may originate from different kinds of searches, including image search, video search, academic search,[2] news search, and industry-specific vertical search engines.</p></li></ul>
 	
 	
 </div>
@@ -123,64 +123,64 @@
 	
 </div>
 
-<button class="gallery_btn"><img src="./img/Forma.png" alt=""><span>Load more</span></button>
-<button class="next_btn"><img src="./img/Forma.png" alt=""><span>Remove loaded</span></button></div>
+<button class="gallery_btn"><img src="img/Forma.png" alt=""><span>Load more</span></button>
+<button class="next_btn"><img src="img/Forma.png" alt=""><span>Remove loaded</span></button></div>
 </section>
 <section class="breaking_news">
 	<div class="main_container">
 	<h2 class="news_title">Breaking news</h2>
 	<div class="news_container">
 	<a class ="breaking_link" href=""><div class="news_item">
-		<img src="./img/Layer 47.png" alt="">
+		<img src="img/Layer%2047.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin| 2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer50.png" alt="">
+		<img src="img/Layer50.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin| 2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer 51.png" alt="">
+		<img src="img/Layer%2051.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin| 2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer 52.png" alt="">
+		<img src="img/Layer%2052.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin|2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer 53.png" alt="">
+		<img src="img/Layer%2053.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin|2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer54.png" alt="">
+		<img src="img/Layer54.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin|2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer55.png" alt="">
+		<img src="img/Layer55.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin|2 comment</p>
 	</div></a>
 	<a href="" class="breaking_link">
 	<div class="news_item">
-		<img src="./img/Layer56.png" alt="">
+		<img src="img/Layer56.png" alt="">
 		<div class="news_icon"><span>12 Feb</span></div>
 		<p>Amazing Blog Post</p>
 		<p>By Admin| 2 comment</p>
@@ -190,21 +190,21 @@
 <section class="comments">
 	<div class="main_container">
 	<h2 class="comments_title">What People Say About theHam</h2>
-<img class="greencomas" src="./img/Combined shape2474.png" alt="greencomas">
+<img class="greencomas" src="img/Combined%20shape2474.png" alt="greencomas">
 <div class="container_images">
 	
 </div>
 
 <div class="container">
 	<button class="btn_prev"></button>
-      <img style="position: absolute;left:54px;" class="elips2" src="./img/Ellipse2.png" data-img ="1" alt="">
-	<img  id = "1"  src="./img/Layer81.png" alt="" class="slider_item">
-	<img style="position: absolute;left:157px;" class ="elips2" src="./img/Ellipse2.png" data-img="2" alt="">
-	<img  id = "2"  src="./img/Layer71.png" alt="" class="slider_item">
-	<img style="position: absolute;left:262px;" class="elips2" src="./img/Ellipse2.png" data-img ="3" alt="">
-	<img id = "3"  src="./img/Layer51.png" alt="" class="slider_item">
-	<img style="position: absolute;left:365px;" class="elips2" src="./img/Ellipse2.png" data-img ="4" alt="">
-	<img  id=  "4"  src="./img/Layer61.png" alt="" class="slider_item">
+      <img style="position: absolute;left:54px;" class="elips2" src="img/Ellipse2.png" data-img ="1" alt="">
+	<img id = "1" src="img/Layer81.png" alt="" class="slider_item">
+	<img style="position: absolute;left:157px;" class ="elips2" src="img/Ellipse2.png" data-img="2" alt="">
+	<img id = "2" src="img/Layer71.png" alt="" class="slider_item">
+	<img style="position: absolute;left:262px;" class="elips2" src="img/Ellipse2.png" data-img ="3" alt="">
+	<img id = "3" src="img/Layer51.png" alt="" class="slider_item">
+	<img style="position: absolute;left:365px;" class="elips2" src="img/Ellipse2.png" data-img ="4" alt="">
+	<img id=  "4" src="img/Layer61.png" alt="" class="slider_item">
 	
 
 <button class="btn_next"></button>
@@ -217,24 +217,24 @@
 	
 	<h2 class="bestimg_title">Gallery of best images</h2>
 <div class="img_container" data-masonry='{ "itemSelector": ".item", "columnWidth": 200 }'>
-	<div class=" item"> <img class="item_img" src="./img/vanglo-house-11.png" alt="" style="height:263px;"></div>
+	<div class=" item"> <img class="item_img" src="img/vanglo-house-11.png" alt="" style="height:263px;"></div>
 
-	<div  class=" item" > <img class="item_img" src="./img/80493541_1281644acb_o1.png" alt="" style="height: 385px;"></div>
+	<div  class=" item" > <img class="item_img" src="img/80493541_1281644acb_o1.png" alt="" style="height: 385px;"></div>
 
-	<div class="item" ><div class="flex_imgs" ><img style="width:185px;height:168px;"  src="./img/ringve-museum-12.png" alt=""><img  style="width: 185px;height: 168px;" src="./img/Kids-Store-Lighting1.png" alt=""> </div></div>
+	<div class="item" ><div class="flex_imgs" ><img style="width:185px;height:168px;" src="img/ringve-museum-12.png" alt=""><img style="width: 185px;height: 168px;" src="img/Kids-Store-Lighting1.png" alt=""> </div></div>
 
-	 <div class="item"><div class="grid_bestimg"><img  src="./img/iaPools-11.png" alt="" ><img  src="./img/Kids-Store-Lighting1.png" alt="" ><img c src="./img/vanglo-house-62.png" alt="" ><img  src="./img/Kids-Store-Lighting-2 2.png" alt="" ><img  src="./img/vanglo-house-41.png" alt="" ><img  src="./img/IAHourses-61.png" alt="" ><img  src="./img/vanglo-house-11.png" alt="" ><img  src="./img/IAbillionares-6 1.png" alt="" ><img  src="./img/BrazilIA-11.png" alt=""></div></div>
+	 <div class="item"><div class="grid_bestimg"><img src="img/iaPools-11.png" alt="" ><img src="img/Kids-Store-Lighting1.png" alt="" ><img c src="img/vanglo-house-62.png" alt="" ><img src="img/Kids-Store-Lighting-2%202.png" alt="" ><img src="img/vanglo-house-41.png" alt="" ><img src="img/IAHourses-61.png" alt="" ><img src="img/vanglo-house-11.png" alt="" ><img src="img/IAbillionares-6%201.png" alt="" ><img src="img/BrazilIA-11.png" alt=""></div></div>
 
-	<div class="item" > <img class="item_img"  style="height: 263px;" src="./img/vanglo-house-61.png" alt=""></div><div class="item"><img class="item_img" style="height: 263px;" src="./img/p1_81.png" alt="" ></div>
-	<div class="item"><img  class="item_img" 
-		style="height: 373px;" src="./img/7328272788_c5048326de_o1.png" alt="" ></div>
+	<div class="item" > <img class="item_img" style="height: 263px;" src="img/vanglo-house-61.png" alt=""></div><div class="item"><img class="item_img" style="height: 263px;" src="img/p1_81.png" alt="" ></div>
+	<div class="item"><img class="item_img"
+						   style="height: 373px;" src="img/7328272788_c5048326de_o1.png" alt="" ></div>
 
-	<div class=" item" ><img class="item_img" style="height: 263px;" src="./img/ringve-museum-12.png" alt=""></div> 
-	 <div class="item" ><img class="item_img" style="height: 300px;" src="./img/vanglo-house-11.png" alt=""></div>
+	<div class=" item" ><img class="item_img" style="height: 263px;" src="img/ringve-museum-12.png" alt=""></div>
+	 <div class="item" ><img class="item_img" style="height: 300px;" src="img/vanglo-house-11.png" alt=""></div>
 	 
 </div>
 
-	 <button class="bestimg_btn"><img src="./img/Forma.png" alt="plus"><span>Load more</span></button>
+	 <button class="bestimg_btn"><img src="img/Forma.png" alt="plus"><span>Load more</span></button>
 
 
 	 </div>
